syntax = "proto3";

package token;

option go_package = "github.com/satimoto/go-ocpi/ocpirpc";

service TokenService {
  rpc CreateToken(CreateTokenRequest) returns (CreateTokenResponse);
  rpc UpdateTokens(UpdateTokensRequest) returns (UpdateTokensResponse);
};

message CreateTokenRequest {
  int64 user_id = 1;
  string uid = 2;
  string type = 3;
  string allowed = 4;
  string whitelist = 5;
};

message CreateTokenResponse {
  int64 id = 1;
  string uid = 2;
  string type = 3;
  string auth_id = 4;
  string visual_number = 5;
  string allowed = 6;
  string whitelist = 7;
}

message UpdateTokensRequest {
  int64 user_id = 1;
  string uid = 2;
  string allowed = 3;
  string whitelist = 4;
};

message UpdateTokensResponse {
  int64 user_id = 1;
  string uid = 2;
  string allowed = 3;
  string whitelist = 4;
}
